# TStudio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  midiclip.py  schema.yaml  test.py  vcpkg-configuration.json  vcpkg.json
src/: main.cpp  scratch.cpp
src/controllers/: CMakeLists.txt  mpk_mini_3.h
src/core/: AudioEngine.cpp  AudioEngine.h  AudioNodePortAudio.h  AudioUtility.h  CMakeLists.txt  ClipEvent.h  Daw.cpp  Daw.h  InstrumentDevice.h  MidiClip.cpp  MidiClip.h  MidiDevice.h  MidiEngine.cpp  MidiEngine.h  MidiEventRegistry.h  MidiHandler.h  MidiMsg.cpp  MidiMsg.h  MidiMsgFilter.cpp  MidiMsgFilter.h  MidiNode.cpp  MidiNode.h  MidiNodeRegistry.h  Playhead.cpp  Playhead.h  Project.cpp  Project.h  SamplerNode.h  Session.cpp  Session.h  SessionCell.cpp  SessionCell.h  SessionManager.cpp  SessionManager.h  SessionScene.cpp  SessionScene.h  SongPosition.h  SynthNode.h  TrackNode.cpp  TrackNode.h
src/displays/: CMakeLists.txt  Push2.h  TextWidget.h  Widget.cpp  Widget.h
src/effects/: CMakeLists.txt  MeterNode.cpp  MeterNode.h
src/hardware/push2/: PixelBitmap.h  Push2Communicator.h  Push2Display.h  Push2Gui.h
src/hardware/scripts/ableton_push2/: __init__.py
src/ui/: CMakeLists.txt  ClipDetail.h  ClipView.h  Colors.h  FooterPanel.h  GridView.h  LayoutDimensions.h  LetterButton.h  Main.h  MainUI.h  MainView.h  SessionCell.h  Sidebar.h  StereoMeter.h  ToggleWidget.h  Toolbar.h  TrackHeader.h  TrackList.h  TrackListItem.h  Utility.h  WidgetBase.h  imgui-knobs.cpp  imgui-knobs.h
